err/motmot.ufmf.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/motmot'...
Listing './lib/python3.5/site-packages/motmot/ufmf'...
Compiling './lib/python3.5/site-packages/motmot/ufmf/fmf2ufmf.py'...
***   File "./lib/python3.5/site-packages/motmot/ufmf/fmf2ufmf.py", line 23
    except fmf_mod.NoMoreFramesException, err:
                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/motmot/ufmf/reindex.py'...
***   File "./lib/python3.5/site-packages/motmot/ufmf/reindex.py", line 24
    except ufmf.ShortUFMFFileError, err:
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/motmot/ufmf/ufmf.py'...
***   File "./lib/python3.5/site-packages/motmot/ufmf/ufmf.py", line 634
    except IOError, err:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/motmot/ufmf/ufmf2fmf.py'...
***   File "./lib/python3.5/site-packages/motmot/ufmf/ufmf2fmf.py", line 10
    print 'frame %d of %d'%(i,len(ts))
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/motmot/ufmf/ufmf_2to3.py'...
***   File "./lib/python3.5/site-packages/motmot/ufmf/ufmf_2to3.py", line 32
    except ufmf.ShortUFMFFileError, err:
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/motmot/ufmf/ufmf_flytrax.py'...
***   File "./lib/python3.5/site-packages/motmot/ufmf/ufmf_flytrax.py", line 611
    except AttributeError, err:
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/motmot/ufmf/ufmfcat.py'...
***   File "./lib/python3.5/site-packages/motmot/ufmf/ufmfcat.py", line 36
    except FMF.NoMoreFramesException, err:
                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/motmot.ufmf-0.4.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
